# tasksd

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  cliff.toml  test.lua
.github/: codecov.yml  dependabot.yml
.github/workflows/: audit.yml  ci.yml  pr-title.yml  release.yml
benches/: ends_with_vs_bytes.rs
docs/: API.md  api.md  architecture.md  main.md
docs/design/: output-and-subscriptions.md
src/: application.rs  handler.rs  io.rs  lib.rs  main.rs  process_manager.rs  service.rs  session.rs  types.rs
src/api/: client_messages.rs  common.rs  connection.rs  error.rs  handler.rs  mod.rs  notification.rs  request.rs  response.rs  server_messages.rs
src/application/: cli_options.rs  error.rs  handler.rs  logger.rs  mod.rs  session.rs  subscriber.rs  subscription_registry.rs
src/server/: background_writer.rs  io.rs  line_io.rs  mod.rs  socket.rs  transport.rs  types.rs  unix_socket.rs
src/tasks/: common.rs  events.rs  finished_task.rs  info.rs  lru_finished_tasks.rs  mod.rs  output_buffer.rs  output_line.rs  pty.rs  pty_reader.rs  recent_finished_tasks.rs  sender.rs  senders.rs  task.rs  task_builder.rs  task_error.rs  task_manager.rs  test_subscribers.rs  tracker.rs  util.rs
src/transport/: background_writer.rs  connection.rs  error.rs  mod.rs  reader.rs  unix_socket.rs
src/utils/: tracker.rs
tests/: base.rs  integration_tests.rs  shutdown.rs  task_get_output.rs  task_send_input.rs  task_send_signal.rs  task_start.rs  task_subscribe_unsubscribe.rs
tests/common/: api.rs  client.rs  mod.rs  test_context.rs
