[package]
name = "tasksd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
num_cpus = "1.17.0"
pin-project = "1.1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
