[package]
name = "tasksd"
version = "0.1.0"
edition = "2024"
authors = [""]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.54", features = ["derive"] }
mockall = "0.14.0"
num_cpus = "1.17.0"
pin-project = "1.1.10"
rustix = { version = "1.1.3", features = ["pty", "process", "fs", "termios"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3.24.0"
tokio-test = "0.4.5"





